--- a/webmagic-spring-boot-autoconfigure/pom.xml
+++ b/webmagic-spring-boot-autoconfigure/pom.xml
@@ -16,6 +16,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>webmagic-core</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 
