--- a/webmagic-spring-boot-autoconfigure/pom.xml
+++ b/webmagic-spring-boot-autoconfigure/pom.xml
@@ -22,6 +22,18 @@
             <artifactId>webmagic-core</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
