--- a/webmagic-spring-boot-samples/src/main/resources/application.properties
+++ b/webmagic-spring-boot-samples/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 webmagic.url=http://www.sina.com
 
-webmagic.cron=0 0/5 * * * ?" 
+webmagic.cron=0 0/5 * * * ? 
 
 logging.level.org.springframework = debug
