--- a/webmagic-spring-boot-autoconfigure/pom.xml
+++ b/webmagic-spring-boot-autoconfigure/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>webmagic-spring-boot</artifactId>
-        <groupId>org.github</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>com.github</groupId>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
