--- a/webmagic-spring-boot-samples/pom.xml
+++ b/webmagic-spring-boot-samples/pom.xml
@@ -4,18 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>webmagic-spring-boot</artifactId>
-        <groupId>org.github</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>com.github</groupId>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.github</groupId>
+    <groupId>com.github</groupId>
     <artifactId>webmagic-spring-boot-samples</artifactId>
     <dependencies>
         <dependency>
-            <groupId>org.github</groupId>
+            <groupId>com.github</groupId>
             <artifactId>webmagic-spring-boot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>us.codecraft</groupId>
