--- a/webmagic-spring-boot-starter/pom.xml
+++ b/webmagic-spring-boot-starter/pom.xml
@@ -4,12 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>webmagic-spring-boot</artifactId>
-        <groupId>org.github</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>com.github</groupId>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <description></description>
 
-    <groupId>org.github</groupId>
+    <groupId>com.github</groupId>
     <artifactId>webmagic-spring-boot-starter</artifactId>
     <name>webmagic-spring-boot-starter</name>
     <dependencies>
@@ -18,9 +19,9 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.github</groupId>
+            <groupId>com.github</groupId>
             <artifactId>webmagic-spring-boot-autoconfigure</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 
