--- a/webmagic-spring-boot-samples/pom.xml
+++ b/webmagic-spring-boot-samples/pom.xml
@@ -4,16 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>webmagic-spring-boot</artifactId>
-        <groupId>com.github</groupId>
+        <groupId>com.github.romewing</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github</groupId>
     <artifactId>webmagic-spring-boot-samples</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.github</groupId>
+            <groupId>com.github.romewing</groupId>
             <artifactId>webmagic-spring-boot-starter</artifactId>
             <version>1.0</version>
         </dependency>
