--- a/webmagic-spring-boot-samples/pom.xml
+++ b/webmagic-spring-boot-samples/pom.xml
@@ -20,6 +20,11 @@
             <groupId>us.codecraft</groupId>
             <artifactId>webmagic-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+            <version>1.2.6.RELEASE</version>
+        </dependency>
     </dependencies>
 
 
